src/objects/BRAC_Health_Visit__c.object
<CustomObject>
    <description>Monthly summary of activity for a PA activity</description>
    <fields>
        <fullName>BRAC_PA_Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The target that the PA is to meet this month</description>
        <label>BRAC PA Target</label>
        <referenceTo>BRAC_PA_Target__c</referenceTo>
        <relationshipLabel>BRAC Health Visits</relationshipLabel>
        <relationshipName>BRAC_Health_Visits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRAC_PA__c</fullName>
        <description>The PA whom the summary is for</description>
        <label>BRAC PA</label>
        <referenceTo>BRAC_PA__c</referenceTo>
        <relationshipLabel>BRAC Health Visits</relationshipLabel>
        <relationshipName>BRAC_Health_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CHP_Attended__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of CHPs that attended refresher training</description>
        <label>CHP Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHP_Visited__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of CHPs visited in the given time period</description>
        <label>CHP Visited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_Immunised__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of children that the PA has immunised this time period</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Children Immunised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date that this summary is for. Should be the first of a month as a summary is for a monthly time period</description>
        <inlineHelpText>Select the 1st of the month that this summary is for</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diarrhoea_Over_5_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of females over 5 treated for diarrhoea</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Diarrhoea Over 5 Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diarrhoea_Over_5_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of males over 5 who have diarrhoea</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Diarrhoea Over 5 Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diarrhoea_Under_5_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of females under 5 who have been treated for diarrhoea</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Diarrhoea Under 5 Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diarrhoea_Under_5_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of males under 5 who were treated for diarrhoea</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Diarrhoea Under 5 Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of health forums visited in the given time period</description>
        <label>Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Households_Visited__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of households visited in a given time period</description>
        <label>Visited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Malaria_Over_5_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of females over 5 that have malaria</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Malaria Over 5 Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Malaria_Over_5_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of males over 5 with malaria</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Malaria Over 5 Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Malaria_Under_5_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of patients with Malaria under 5 who are female</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Malaria Under 5 Female</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Malaria_Under_5_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of males under 5 that have malaria</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Malaria Under 5 Male</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Distance_Traveled__c</fullName>
        <description>The maximum distance that the PA travelled in this month</description>
        <label>Max Distance Traveled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pregnant_Women__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of pregnant women the PA has identified in this time period</description>
        <inlineHelpText>You should not be creating these records by hand. Stop it!</inlineHelpText>
        <label>Pregnant Women</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BRAC Health Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BRAC Health Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRAC Health Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>